<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail_poster"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_detail_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
        tools:text="@string/year" />

    <TextView
        android:id="@+id/tv_detail_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/tv_detail_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="@string/duration" />

    <TextView
        android:id="@+id/tv_detail_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/score"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_on_primary"
        android:background="@color/black"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_poster"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_poster" />

    <TextView
        android:id="@+id/tv_detail_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textColor="@color/design_default_color_on_secondary"
        tools:text="@string/overview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_year" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />
</androidx.constraintlayout.widget.ConstraintLayout>